1.添加托盘功能 2.添加wiki跳转，截图目录跳转等功能 3.优化头像同步与显示 4.优化UI显示 5.修复卡池部分情况下无法刷新的问题